--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -1,3 +1,5 @@
+{% extends "polls/base_generic.html" %}
+{%block content%}
 <h1>{{question.question_text}}</h1>
 {% if error_message %} <p><strong>{{error_message}}</strong></p>{%endif%}
 <form action="{% url 'polls:vote' question.id %}" method="POST">
@@ -9,3 +11,4 @@
     <input type="submit" value="vote"/>
 
     </form>
+    {%endblock%}
