--- a/mysite/polls/templates/polls/results.html
+++ b/mysite/polls/templates/polls/results.html
@@ -1,3 +1,5 @@
+{% extends "polls/base_generic.html" %}
+{%block content%}
 <h1> {{question.question_text}}</h1>
 <ul>
     {%for choice in question.choice_set.all %}
@@ -6,3 +8,4 @@
     </ul>
     
     <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+    {%endblock%}
