--- a/mysite/polls/templates/polls/base_generic.html
+++ b/mysite/polls/templates/polls/base_generic.html
@@ -25,6 +25,17 @@
           <li><a href="{% url 'polls:index' %}">Home</a></li>
           <li><a href="">All Questions</a></li>
       </ul>
+      <ul class="sidebar-nav">
+
+        ...
+    
+       {% if user.is_authenticated %}
+         <li>User: {{ user.get_username }}</li>
+         <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
+       {% else %}
+         <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
+       {% endif %} 
+      </ul>
      {% endblock %}
       </div>
       <div class="col-sm-10 ">
